update readme and download

--- a/marshak/sample_classification/0_Download_Planet_By_ID.ipynb
+++ b/marshak/sample_classification/0_Download_Planet_By_ID.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "identical-medicine",
+   "id": "rational-plane",
    "metadata": {},
    "source": [
     "Most of this is thanks to Matt Bonnema."
@@ -11,11 +11,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "floating-rachel",
+   "id": "signal-logistics",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:34:35.786486Z",
-     "start_time": "2022-06-21T18:34:35.763543Z"
+     "end_time": "2022-06-24T18:33:09.420384Z",
+     "start_time": "2022-06-24T18:33:09.397151Z"
     }
    },
    "outputs": [],
@@ -27,11 +27,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "alert-origin",
+   "id": "champion-cooler",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:34:35.899045Z",
-     "start_time": "2022-06-21T18:34:35.788816Z"
+     "end_time": "2022-06-24T18:33:09.510442Z",
+     "start_time": "2022-06-24T18:33:09.422642Z"
     }
    },
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "entire-maine",
+   "id": "sustainable-worry",
    "metadata": {},
    "source": [
     "Paste Planet API key below. Do not share notebook with your API key. WIP: set and use API_KEY environment variable"
@@ -52,42 +52,42 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "minimal-cooper",
+   "id": "legal-present",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:34:35.917677Z",
-     "start_time": "2022-06-21T18:34:35.900726Z"
+     "end_time": "2022-06-24T18:33:09.530502Z",
+     "start_time": "2022-06-24T18:33:09.512348Z"
     }
    },
    "outputs": [],
    "source": [
-    "config = dotenv_values(\".env\")\n",
+    "config = dotenv_values()\n",
     "planet_api_key = config['PLANET_API_KEY']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "timely-peripheral",
+   "execution_count": 4,
+   "id": "formal-metropolitan",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-22T21:22:30.236375Z",
-     "start_time": "2022-06-22T21:22:30.229941Z"
+     "end_time": "2022-06-24T18:33:09.550320Z",
+     "start_time": "2022-06-24T18:33:09.533068Z"
     }
    },
    "outputs": [],
    "source": [
-    "PLANET_SCENE_ID = '20211028_045455_02_2459'"
+    "PLANET_SCENE_ID = '20211003_161639_91_241d'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "noted-change",
+   "execution_count": 5,
+   "id": "phantom-galaxy",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:34:36.508354Z",
-     "start_time": "2022-06-21T18:34:35.920731Z"
+     "end_time": "2022-06-24T18:33:10.464809Z",
+     "start_time": "2022-06-24T18:33:09.552309Z"
     }
    },
    "outputs": [
@@ -97,7 +97,7 @@
        "dict_keys(['_links', '_permissions', 'assets', 'geometry', 'id', 'properties', 'type'])"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,12 +112,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "protected-visit",
+   "execution_count": 6,
+   "id": "scenic-detail",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:34:36.529210Z",
-     "start_time": "2022-06-21T18:34:36.509937Z"
+     "end_time": "2022-06-24T18:33:10.485588Z",
+     "start_time": "2022-06-24T18:33:10.466612Z"
     }
    },
    "outputs": [
@@ -140,7 +140,7 @@
        " 'ortho_visual']"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "military-situation",
+   "id": "single-morning",
    "metadata": {},
    "source": [
     "# Download Data"
@@ -159,22 +159,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "id": "alpha-liverpool",
+   "execution_count": 7,
+   "id": "convenient-stocks",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:49:23.276459Z",
-     "start_time": "2022-06-21T18:49:23.257734Z"
+     "end_time": "2022-06-24T18:33:10.508605Z",
+     "start_time": "2022-06-24T18:33:10.487629Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<planet.api.downloader._Downloader at 0x10ec0aeb0>"
+       "<planet.api.downloader._Downloader at 0x1099ca070>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,12 +189,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "amended-haiti",
+   "execution_count": 8,
+   "id": "distant-agreement",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:34:36.568636Z",
-     "start_time": "2022-06-21T18:34:36.551899Z"
+     "end_time": "2022-06-24T18:33:10.528250Z",
+     "start_time": "2022-06-24T18:33:10.510551Z"
     }
    },
    "outputs": [],
@@ -205,12 +205,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "statutory-longer",
+   "execution_count": 9,
+   "id": "distant-retention",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:34:36.589105Z",
-     "start_time": "2022-06-21T18:34:36.570903Z"
+     "end_time": "2022-06-24T18:33:10.549353Z",
+     "start_time": "2022-06-24T18:33:10.530209Z"
     }
    },
    "outputs": [
@@ -220,7 +220,7 @@
        "{'paging': False, 'activating': 0, 'pending': 0, 'complete': 0}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,12 +231,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "economic-prescription",
+   "execution_count": 10,
+   "id": "amino-maker",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:49:21.354713Z",
-     "start_time": "2022-06-21T18:49:21.338159Z"
+     "end_time": "2022-06-24T18:33:10.570936Z",
+     "start_time": "2022-06-24T18:33:10.553090Z"
     }
    },
    "outputs": [],
@@ -246,12 +246,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "decreased-found",
+   "execution_count": 11,
+   "id": "essential-original",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:52:02.196952Z",
-     "start_time": "2022-06-21T18:49:25.281888Z"
+     "end_time": "2022-06-24T18:33:11.477504Z",
+     "start_time": "2022-06-24T18:33:10.573072Z"
     }
    },
    "outputs": [
@@ -261,7 +261,7 @@
        "{'paging': False, 'activating': 0, 'pending': 0, 'complete': 1}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,12 +274,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "sensitive-roberts",
+   "execution_count": 12,
+   "id": "painted-remark",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:52:02.215690Z",
-     "start_time": "2022-06-21T18:52:02.199252Z"
+     "end_time": "2022-06-24T18:33:11.495824Z",
+     "start_time": "2022-06-24T18:33:11.479309Z"
     }
    },
    "outputs": [],
@@ -289,28 +289,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "graduate-biology",
+   "execution_count": 13,
+   "id": "retained-regression",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:52:02.234707Z",
-     "start_time": "2022-06-21T18:52:02.217641Z"
+     "end_time": "2022-06-24T18:33:11.514458Z",
+     "start_time": "2022-06-24T18:33:11.497716Z"
     }
    },
    "outputs": [],
    "source": [
-    "out_path = Path('test_chip')\n",
+    "out_path = Path('local_chips')\n",
     "out_path.mkdir(exist_ok=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "waiting-advisory",
+   "execution_count": 14,
+   "id": "worldwide-automation",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:55:26.631863Z",
-     "start_time": "2022-06-21T18:52:02.237033Z"
+     "end_time": "2022-06-24T18:33:14.746187Z",
+     "start_time": "2022-06-24T18:33:11.516250Z"
     }
    },
    "outputs": [
@@ -318,7 +318,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:FuturesSession:`background_callback` is deprecated and will be removed in 1.0, use `hooks` instead\n"
+      "`background_callback` is deprecated and will be removed in 1.0, use `hooks` instead\n"
      ]
     },
     {
@@ -329,10 +329,10 @@
        " 'pending': 0,\n",
        " 'complete': 1,\n",
        " 'downloading': 0,\n",
-       " 'downloaded': '1110.91MB'}"
+       " 'downloaded': '0.00MB'}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -345,12 +345,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "ethical-quantity",
+   "execution_count": 15,
+   "id": "clear-theater",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-06-21T18:55:26.652575Z",
-     "start_time": "2022-06-21T18:55:26.633960Z"
+     "end_time": "2022-06-24T18:33:14.765804Z",
+     "start_time": "2022-06-24T18:33:14.748084Z"
     }
    },
    "outputs": [
@@ -360,7 +360,7 @@
        "{'paging': False, 'activating': 0, 'pending': 0, 'complete': 0}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
