--- a/venkataramani/notebooks/1-download-dswe-data.ipynb
+++ b/venkataramani/notebooks/1-download-dswe-data.ipynb
@@ -33,6 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# We have a reference shapefile describing a polygon over Lake Mead in Nevada\n",
     "df = gpd.read_file('../data/shapefiles/lake_mead/aoi.shp')\n",
     "shape_geojson = json.loads(df.to_json())['features'][0]['geometry']"
    ]
@@ -162,8 +163,6 @@
     "            asset_url = _item.assets[_asset_type.lower()].href\n",
     "            filename = asset_url.split('/')[-1]\n",
     "\n",
-    "\n",
-    "\n",
     "            print(f'Downloading {filename}...')\n",
     "            respb = s.get(asset_url,\n",
     "                        allow_redirects=True,\n",
@@ -193,6 +192,7 @@
     }
    ],
    "source": [
+    "# We can download the default ('diagnostic') asset type\n",
     "download_asset(items[5])"
    ]
   },
@@ -213,6 +213,7 @@
     }
    ],
    "source": [
+    "# We can specify an alternative asset type to download\n",
     "download_asset(items[7], asset_type='mask')"
    ]
   },
@@ -243,6 +244,7 @@
     }
    ],
    "source": [
+    "# We can specify a list of items and a list of asset types to download\n",
     "download_asset(items[2:4], asset_type=['intr', 'intsm', 'inwam'])"
    ]
   }
