fix urls for peckel

--- a/marshak/auxiliary_water_masks/Peckel Water Mask.ipynb
+++ b/marshak/auxiliary_water_masks/Peckel Water Mask.ipynb
@@ -3,11 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "middle-firewall",
+   "id": "recorded-sense",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T00:23:15.049547Z",
-     "start_time": "2022-07-06T00:23:13.689683Z"
+     "end_time": "2022-07-11T17:48:45.006150Z",
+     "start_time": "2022-07-11T17:48:43.531091Z"
     }
    },
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aging-dominican",
+   "id": "norman-essex",
    "metadata": {},
    "source": [
     "# Generate Tiles"
@@ -34,11 +34,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "selective-excitement",
+   "id": "assisted-denial",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T00:23:15.072824Z",
-     "start_time": "2022-07-06T00:23:15.052037Z"
+     "end_time": "2022-07-11T17:48:45.029794Z",
+     "start_time": "2022-07-11T17:48:45.008547Z"
     }
    },
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "guided-scholar",
+   "id": "expressed-attendance",
    "metadata": {},
    "source": [
     "Sample url: https://storage.googleapis.com/global-surface-water/downloads2020/occurrence/occurrence_70W_20Sv1_3_2020.tif"
@@ -65,12 +65,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "painted-drill",
+   "execution_count": 7,
+   "id": "north-exploration",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T00:23:15.319139Z",
-     "start_time": "2022-07-06T00:23:15.077368Z"
+     "end_time": "2022-07-11T17:51:10.972764Z",
+     "start_time": "2022-07-11T17:51:10.817133Z"
     }
    },
    "outputs": [
@@ -80,7 +80,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -106,13 +106,13 @@
     "    base_url = 'https://storage.googleapis.com/global-surface-water/downloads2020/occurrence'\n",
     "    lon, lat = corner\n",
     "    if lon < 0:\n",
-    "        lon_str = f'{abs(lon):03d}W'\n",
+    "        lon_str = f'{abs(lon):d}W'\n",
     "    else:\n",
-    "        lon_str = f'{abs(lon):03d}E'\n",
+    "        lon_str = f'{abs(lon):d}E'\n",
     "    if lat >= 0:\n",
-    "        lat_str = f'{abs(lat):02d}N'\n",
+    "        lat_str = f'{abs(lat):d}N'\n",
     "    else:\n",
-    "        lat_str = f'{abs(lat):02d}S'\n",
+    "        lat_str = f'{abs(lat):d}S'\n",
     "    return f'{base_url}/occurrence_{lon_str}_{lat_str}v1_3_2020.tif'\n",
     "\n",
     "df_peckel_data['source_url'] = list(map(url_generator, ul_corners))\n",
@@ -122,12 +122,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "stupid-personal",
+   "execution_count": 8,
+   "id": "voluntary-affair",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T00:23:15.324035Z",
-     "start_time": "2022-07-06T00:23:15.321040Z"
+     "end_time": "2022-07-11T17:51:11.596326Z",
+     "start_time": "2022-07-11T17:51:11.593146Z"
     }
    },
    "outputs": [
@@ -146,12 +146,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "homeless-london",
+   "execution_count": 9,
+   "id": "powered-scotland",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-07-06T00:23:15.419114Z",
-     "start_time": "2022-07-06T00:23:15.325740Z"
+     "end_time": "2022-07-11T17:51:12.128018Z",
+     "start_time": "2022-07-11T17:51:12.064726Z"
     }
    },
    "outputs": [],
@@ -162,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "searching-david",
+   "id": "beautiful-blood",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-06T00:23:16.418728Z",
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "southern-butter",
+   "id": "deluxe-toner",
    "metadata": {},
    "source": [
     "# Get Peckel Data"
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "engaging-white",
+   "id": "functional-storm",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-06T00:23:56.339866Z",
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "enclosed-remedy",
+   "id": "official-disney",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-06T00:23:16.451826Z",
@@ -358,7 +358,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "close-bundle",
+   "id": "periodic-excuse",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-06T00:23:16.461457Z",
@@ -386,7 +386,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "physical-promotion",
+   "id": "light-implement",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-06T00:24:29.983367Z",
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "sound-howard",
+   "id": "persistent-screen",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-06T00:24:30.105536Z",
@@ -439,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "devoted-tongue",
+   "id": "copyrighted-cornell",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-07-06T00:24:30.116797Z",
