--- a/venkataramani/notebooks/1-download-dswe-data.ipynb
+++ b/venkataramani/notebooks/1-download-dswe-data.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Refer to the Landsat Collection 2 Level 3 DSWe data format control book ([direct link](https://d9-wret.s3.us-west-2.amazonaws.com/assets/palladium/production/s3fs-public/media/files/LSDS-2042_LandsatC2_L3_DSWE_DFCB-v2.pdf), [USGS landing page](https://www.usgs.gov/centers/eros/science/usgs-eros-archive-landsat-collection-2-level-3-dynamic-surface-water-extent)) for information on the various DSWE data products"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -265,7 +272,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
