use getpass for API key

--- a/ASF/0_Download_Preprocess_Planet_Data.ipynb
+++ b/ASF/0_Download_Preprocess_Planet_Data.ipynb
@@ -30,8 +30,15 @@
    "source": [
     "from planet import api\n",
     "from pathlib import Path\n",
-    "from planet.api import downloader"
+    "from planet.api import downloader\n",
+    "from getpass import getpass"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7a74e45a-fa0a-48b4-a929-16b39f19d796",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -45,7 +52,7 @@
    },
    "outputs": [],
    "source": [
-    "planet_api_key = input(\"Input your Planet API key\")"
+    "planet_api_key = getpass(\"Input your Planet API key\")"
    ]
   },
   {
@@ -60,8 +67,8 @@
    },
    "outputs": [],
    "source": [
-    "# planet_scene_id = '20211003_161639_91_241d'\n",
-    "planet_scene_id = input(\"Enter a Planet Scene ID\")"
+    "planet_scene_id = '20211003_161639_91_241d'\n",
+    "# planet_scene_id = input(\"Enter a Planet Scene ID\")"
    ]
   },
   {
@@ -81,21 +88,6 @@
     "                      planet_scene_id)\n",
     "resp = req.get()\n",
     "resp.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "scenic-detail",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-24T18:33:10.485588Z",
-     "start_time": "2022-06-24T18:33:10.466612Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "resp['assets']"
    ]
   },
   {
@@ -129,21 +121,6 @@
    "source": [
     "items_to_download = [resp]\n",
     "asset_types = ['ortho_analytic_8b_sr']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "distant-retention",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-24T18:33:10.549353Z",
-     "start_time": "2022-06-24T18:33:10.530209Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "downloader.stats()"
    ]
   },
   {
