--- a/ssangha/sample_classification_unsupervised_peckel_automation/chips/4_37/UnsupervisedClassification_with_kernel_automatedlabeling.ipynb
+++ b/ssangha/sample_classification_unsupervised_peckel_automation/chips/4_37/UnsupervisedClassification_with_kernel_automatedlabeling.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "This is a slightly involved classification notebook - using superpixels to generate features. The results look good in that we reduce commission errors."
+    "This is a slightly involved classification notebook - using superpixels to generate features. The results look good in that we reduce commission errors. For Chip 4_37."
    ],
    "metadata": {}
   },
