planet_download function

--- a/ASF/0_Download_Preprocess_Planet_Data.ipynb
+++ b/ASF/0_Download_Preprocess_Planet_Data.ipynb
@@ -17,6 +17,8 @@
     "import numpy as np\n",
     "from pathlib import Path\n",
     "from pprint import pprint\n",
+    "from typing import List, Union\n",
+    "\n",
     "import rasterio\n",
     "from rasterio.windows import Window\n",
     "from rscube.nd_tools import (get_array_from_features, \n",
@@ -87,133 +89,45 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "phantom-galaxy",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-24T18:33:10.464809Z",
-     "start_time": "2022-06-24T18:33:09.552309Z"
-    }
-   },
+   "id": "9de48912-b8b1-4fb6-bd87-5bdff161b407",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "client = api.ClientV1(api_key=planet_api_key)\n",
-    "req = client.get_item('PSScene', \n",
-    "                      planet_scene_id)\n",
-    "resp = req.get()\n",
-    "resp.keys()"
+    "def planet_download(api_key: str, scene_id: str, output_dir: Union[str, Path] = Path.cwd(), asset_types: List = ['ortho_analytic_8b_sr']):\n",
+    "    \"\"\"\n",
+    "    Download Planet data by scene ID \n",
+    "\n",
+    "    Keyword arguments:\n",
+    "    api_key    -- Planet API key\n",
+    "    scene_id   -- Planet data scene ID\n",
+    "    output_dir -- path to directory in which to download data\n",
+    "    asset_types -- Planet data asset types to download\n",
+    "    \"\"\"\n",
+    "    output_dir = Path(output_dir)\n",
+    "    output_dir.mkdir(exist_ok=True)\n",
+    "    \n",
+    "    client = api.ClientV1(api_key=planet_api_key)\n",
+    "    request = client.get_item('PSScene', \n",
+    "                          scene_id)\n",
+    "    items_to_download = [request.get()]\n",
+    "\n",
+    "    downloader = api.downloader.create(client)\n",
+    "    downloader.activate(iter(items_to_download), asset_types)\n",
+    "    downloader.download(iter(items_to_download), asset_types, str(output_dir))\n",
+    "    print(downloader.stats())\n",
+    "    downloader.shutdown()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "convenient-stocks",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-24T18:33:10.508605Z",
-     "start_time": "2022-06-24T18:33:10.487629Z"
-    }
-   },
+   "id": "dd2d2776-637b-41ac-89b8-7b05c39009bf",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "client = api.ClientV1(api_key=planet_api_key)\n",
-    "downloader = downloader.create(client)\n",
-    "downloader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "distant-agreement",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-24T18:33:10.528250Z",
-     "start_time": "2022-06-24T18:33:10.510551Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "items_to_download = [resp]\n",
-    "asset_types = ['ortho_analytic_8b_sr']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "essential-original",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-24T18:33:11.477504Z",
-     "start_time": "2022-06-24T18:33:10.573072Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "n = len(items_to_download)\n",
-    "resp_ac = downloader.activate(iter(items_to_download), asset_types)\n",
-    "resp_ac"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "retained-regression",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-24T18:33:11.514458Z",
-     "start_time": "2022-06-24T18:33:11.497716Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "out_path = Path('local_chips')\n",
-    "out_path.mkdir(exist_ok=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "worldwide-automation",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-24T18:33:14.746187Z",
-     "start_time": "2022-06-24T18:33:11.516250Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "n = len(items_to_download)\n",
-    "resp_dl = downloader.download(iter(items_to_download), asset_types, str(out_path))\n",
-    "resp_dl"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "clear-theater",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-24T18:33:14.765804Z",
-     "start_time": "2022-06-24T18:33:14.748084Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "downloader.stats()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "painted-remark",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2022-06-24T18:33:11.495824Z",
-     "start_time": "2022-06-24T18:33:11.479309Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "downloader.shutdown()"
+    "output_dir = Path.cwd()/\"planet_data\"\n",
+    "\n",
+    "planet_download(planet_api_key, planet_scene_id, output_dir)"
    ]
   },
   {
