--- a/ASF/0_Download_Preprocess_Planet_Data.ipynb
+++ b/ASF/0_Download_Preprocess_Planet_Data.ipynb
@@ -33,7 +33,7 @@
     "from shapely.geometry import box\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "from planet import api\n",
+    "# from planet import api\n",
     "from planet.api import downloader"
    ]
   },
@@ -98,9 +98,9 @@
     "    Download Planet data by scene ID \n",
     "\n",
     "    Keyword arguments:\n",
-    "    api_key    -- Planet API key\n",
-    "    scene_id   -- Planet data scene ID\n",
-    "    output_dir -- path to directory in which to download data\n",
+    "    api_key     -- Planet API key\n",
+    "    scene_id    -- Planet data scene ID\n",
+    "    output_dir  -- path to directory in which to download data\n",
     "    asset_types -- Planet data asset types to download\n",
     "    \"\"\"\n",
     "    output_dir = Path(output_dir)\n",
@@ -135,9 +135,9 @@
    "id": "2e778594-3ec8-4951-8d67-fc2cf784e893",
    "metadata": {},
    "source": [
-    "# 2. Preprocess Planet Imagery\n",
+    "# 2. Preprocess Planet Data\n",
     "\n",
-    "### Open Planet data and expose metadata"
+    "### Expose metadata"
    ]
   },
   {
@@ -147,7 +147,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "planet_image_path = list(Path.cwd().rglob(f'local_chips/{planet_scene_id}*.tif'))[0]\n",
+    "planet_image_path = list(output_dir.rglob(f'{planet_scene_id}*.tif'))[0]\n",
     "\n",
     "with rasterio.open(planet_image_path) as ds:\n",
     "    planet_crs = ds.crs\n",
