--- a/ASF/0_Download_Preprocess_Planet_Data.ipynb
+++ b/ASF/0_Download_Preprocess_Planet_Data.ipynb
@@ -17,6 +17,7 @@
     "import numpy as np\n",
     "from pathlib import Path\n",
     "from pprint import pprint\n",
+    "import shutil\n",
     "from typing import List, Union\n",
     "\n",
     "import rasterio\n",
@@ -33,7 +34,7 @@
     "from shapely.geometry import box\n",
     "from tqdm.notebook import tqdm\n",
     "\n",
-    "# from planet import api\n",
+    "from planet import api\n",
     "from planet.api import downloader"
    ]
   },
@@ -125,9 +126,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output_dir = Path.cwd()/\"planet_data\"\n",
+    "planet_dir = Path.cwd()/\"planet_data\"\n",
     "\n",
-    "planet_download(planet_api_key, planet_scene_id, output_dir)"
+    "planet_download(planet_api_key, planet_scene_id, planet_dir)"
    ]
   },
   {
@@ -147,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "planet_image_path = list(output_dir.rglob(f'{planet_scene_id}*.tif'))[0]\n",
+    "planet_image_path = list(planet_dir.rglob(f'{planet_scene_id}*.tif'))[0]\n",
     "\n",
     "with rasterio.open(planet_image_path) as ds:\n",
     "    planet_crs = ds.crs\n",
@@ -164,7 +165,9 @@
   {
    "cell_type": "markdown",
    "id": "7fdade45-aaf5-43e5-b955-d95a7b45c679",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Read chips geojson into a DataFrame and project to Planet data's UTM"
    ]
@@ -325,6 +328,24 @@
     "output = preprocessed_path/f'cropped_to_chip_{index}.tif'\n",
     "with rasterio.open(output, 'w', **profile_rgnir_cropped) as ds:\n",
     "    ds.write(rgnir_cropped.transpose([2, 0, 1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b124aa26-0233-4330-bc5a-6480ed3cdce8",
+   "metadata": {},
+   "source": [
+    "### Delete original planet data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01507f0b-75dd-4b5a-8b4a-a624a360248d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "shutil.rmtree(planet_dir)"
    ]
   },
   {
