--- a/ASF/0_Download_Preprocess_Planet_Data.ipynb
+++ b/ASF/0_Download_Preprocess_Planet_Data.ipynb
@@ -21,7 +21,9 @@
     "from typing import List, Union\n",
     "\n",
     "import rasterio\n",
+    "from rasterio.warp import calculate_default_transform, reproject, Resampling\n",
     "from rasterio.windows import Window\n",
+    "\n",
     "from rscube.nd_tools import (get_array_from_features, \n",
     "                             get_features_from_array, \n",
     "                             get_superpixel_area_as_features, \n",
@@ -203,7 +205,7 @@
    "source": [
     "intersects = chips.geometry.intersects(planet_box) # create intersection mask\n",
     "intersecting_chips = chips[intersects].reset_index(drop=True) # create new Dataframe containing intersecting chips\n",
-    "intersecting_chips.head()\n",
+    "print(intersecting_chips.head())\n",
     "chip_id = index = intersecting_chips.random_id[0]"
    ]
   },
@@ -322,12 +324,56 @@
     "profile_rgnir_cropped['dtype'] = 'float32'\n",
     "profile_rgnir_cropped['nodata'] = np.nan\n",
     "\n",
-    "preprocessed_path = Path('preprocessed_chips')\n",
+    "preprocessed_path = Path('chips')\n",
     "preprocessed_path.mkdir(exist_ok=True)\n",
     "\n",
-    "output = preprocessed_path/f'cropped_to_chip_{index}.tif'\n",
-    "with rasterio.open(output, 'w', **profile_rgnir_cropped) as ds:\n",
+    "utm = planet_crs['init'].split(':')[-1]\n",
+    "utm_output = preprocessed_path/f'{planet_image_path.stem}_cropped_to_chip_{utm}_{index}.tif'\n",
+    "with rasterio.open(utm_output, 'w', **profile_rgnir_cropped) as ds:\n",
     "    ds.write(rgnir_cropped.transpose([2, 0, 1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb217d4f-cbbc-4852-b710-a0c72c044077",
+   "metadata": {},
+   "source": [
+    "### Reproject preprocessed chip to latlon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e48489ea-fdcd-4686-bbea-93b7157cf444",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dst_crs = 'EPSG:4326'\n",
+    "\n",
+    "source = utm_output\n",
+    "latlon_output = preprocessed_path/f'{planet_image_path.stem}_cropped_to_chip_{index}_latlon.tif'\n",
+    "\n",
+    "with rasterio.open(source) as src:\n",
+    "    transform, width, height = calculate_default_transform(\n",
+    "        src.crs, dst_crs, src.width, src.height, *src.bounds)\n",
+    "    kwargs = src.meta.copy()\n",
+    "    kwargs.update({\n",
+    "        'crs': dst_crs,\n",
+    "        'transform': transform,\n",
+    "        'width': width,\n",
+    "        'height': height\n",
+    "    })\n",
+    "\n",
+    "    with rasterio.open(latlon_output, 'w', **kwargs) as dst:\n",
+    "        for i in range(1, src.count + 1):\n",
+    "            reproject(\n",
+    "                source=rasterio.band(src, i),\n",
+    "                destination=rasterio.band(dst, i),\n",
+    "                src_transform=src.transform,\n",
+    "                src_crs=src.crs,\n",
+    "                dst_transform=transform,\n",
+    "                dst_crs=dst_crs,\n",
+    "                resampling=Resampling.nearest)"
    ]
   },
   {
@@ -335,7 +381,7 @@
    "id": "b124aa26-0233-4330-bc5a-6480ed3cdce8",
    "metadata": {},
    "source": [
-    "### Delete original planet data"
+    "### Delete original planet data and cropped chip in utm"
    ]
   },
   {
@@ -345,7 +391,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "shutil.rmtree(planet_dir)"
+    "try:\n",
+    "    shutil.rmtree(planet_dir)\n",
+    "except FileNotFoundError:\n",
+    "    pass\n",
+    "\n",
+    "try:\n",
+    "    utm_output.unlink()\n",
+    "except FileNotFoundError:\n",
+    "    pass"
    ]
   },
   {
@@ -370,9 +424,10 @@
     "    return [np.nanpercentile(raster, low),\n",
     "            np.nanpercentile(raster, high)]\n",
     "\n",
-    "with rasterio.open(output) as ds:\n",
+    "with rasterio.open(latlon_output) as ds:\n",
     "    image_c = ds.read(window=window)\n",
     "    image_c = image_c.transpose([1, 2, 0]).astype(np.float32)\n",
+    "\n",
     "    \n",
     "    fig, (ax_r, ax_g, ax_nir) = plt.subplots(1, 3, figsize=(28,7))\n",
     "    thresh = get_raster_threshold(image_c[..., 0])\n",
@@ -387,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9a403d87-65ac-4398-be59-bf4402b6a8f6",
+   "id": "2cb5b435-374d-4aa0-a4e2-41bd73348301",
    "metadata": {},
    "outputs": [],
    "source": []
