move to xarray based workflow

--- a/ASF/0_Download_Preprocess_Planet_Data.ipynb
+++ b/ASF/0_Download_Preprocess_Planet_Data.ipynb
@@ -37,7 +37,11 @@
     "from tqdm.notebook import tqdm\n",
     "\n",
     "from planet import api\n",
-    "from planet.api import downloader"
+    "from planet.api import downloader\n",
+    "\n",
+    "\n",
+    "import rioxarray as rxr\n",
+    "from shapely.geometry import mapping"
    ]
   },
   {
@@ -138,7 +142,9 @@
    "id": "2e778594-3ec8-4951-8d67-fc2cf784e893",
    "metadata": {},
    "source": [
-    "# 2. Preprocess Planet Data\n",
+    "# 2. Identify Intersecting Chip\n",
+    "\n",
+    "**TODO: ACCOUNT FOR MULTIPLE CHIP INTERSECTIONS**\n",
     "\n",
     "### Expose metadata"
    ]
@@ -171,7 +177,7 @@
     "tags": []
    },
    "source": [
-    "### Read chips geojson into a DataFrame and project to Planet data's UTM"
+    "### Read chips into a DataFrame and project to Planet data's UTM"
    ]
   },
   {
@@ -181,9 +187,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chips = gpd.read_file('ResampleblocksUpd.geojson')\n",
-    "chips = chips.to_crs(planet_crs)\n",
-    "chips.head()"
+    "chips = gpd.read_file('chips.geojson')\n",
+    "chips_utm = chips.to_crs(planet_crs)\n",
+    "chips_utm.head()"
    ]
   },
   {
@@ -203,10 +209,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "intersects = chips.geometry.intersects(planet_box) # create intersection mask\n",
-    "intersecting_chips = chips[intersects].reset_index(drop=True) # create new Dataframe containing intersecting chips\n",
-    "print(intersecting_chips.head())\n",
-    "chip_id = index = intersecting_chips.random_id[0]"
+    "intersects = chips_utm.geometry.intersects(planet_box) # create intersection mask\n",
+    "intersecting_chips = chips_utm[intersects].reset_index(drop=True) # create new Dataframe containing intersecting chips\n",
+    "chip_id = index = intersecting_chips.random_id[0]\n",
+    "intersecting_chips"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b32c66f6-3e0f-4ca0-ab07-5c94046a9a51",
+   "metadata": {},
+   "source": [
+    "# 3. Create Chip Shapefile  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "132bcebf-4bbd-44be-83e3-dca40458220d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chips_dir = Path.cwd()/\"chips\"\n",
+    "chips_dir.mkdir(exist_ok=True)\n",
+    "\n",
+    "chip_dir = chips_dir/f\"chip_{chip_id}\"\n",
+    "chip_dir.mkdir(exist_ok=True)\n",
+    "\n",
+    "shape_path = chip_dir/f'chip_{index}.shp'\n",
+    "\n",
+    "geom = chips.loc[chips['random_id'] == chip_id, 'geometry'].values[0]\n",
+    "df = gpd.GeoDataFrame({\"id\":1,\"geometry\":[geom]})\n",
+    "df.to_file(shape_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b69de0b-d6c5-47c2-966f-08a42075dd0f",
+   "metadata": {},
+   "source": [
+    "# 4. Preprocess Data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54fa0201-aeea-44f8-a944-3573021a721c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crop_extent = chips.loc[chips['random_id'] == chip_id, 'geometry'].values[0]\n",
+    "crop_extent"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d28b9cb-dec5-48ef-9d2a-130eb230569b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "crop_extent_gdf = gpd.GeoDataFrame(index=[0], crs='EPSG:4326', geometry=[crop_extent])\n",
+    "crop_extent_gdf"
    ]
   },
   {
@@ -214,23 +278,20 @@
    "id": "7b7fdc08-efa1-47e4-accb-a85fe5dfba15",
    "metadata": {},
    "source": [
-    "### Create an image profile for the Planet Data, clipped to the chip extent "
+    "### Clip Planet data to the chip extent "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "994567f2-45ab-4ef7-80af-4e4c1dcbf536",
+   "id": "bea1e739-e203-433f-b17c-90d3a07caf1f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "(start_y, start_x), (stop_y, stop_x) = get_indices_from_extent(planet_profile['transform'],\n",
-    "                                                               list(chips.total_bounds),\n",
-    "                                                               shape=planet_shape)\n",
-    "window = Window.from_slices((start_y, stop_y), (start_x, stop_x))\n",
-    "sx, sy = np.s_[start_x: stop_x], np.s_[start_y: stop_y]\n",
-    "profile_cropped = get_cropped_profile(planet_profile, sx, sy)\n",
-    "print(f'Cropped Planet Image Profile: {profile_cropped}')"
+    "planet_image = rxr.open_rasterio(planet_image_path,\n",
+    "                                 masked=True).squeeze()\n",
+    "\n",
+    "planet_clipped = planet_image.rio.clip(crop_extent_gdf.geometry.apply(mapping), 'EPSG:4326')"
    ]
   },
   {
@@ -244,16 +305,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d21226b-f928-4e86-962d-08fec2a6dd32",
+   "id": "4ff76c31-1396-4132-be03-f3e78421ced8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with rasterio.open(planet_image_path) as ds:\n",
-    "    planet_ds = ds.read(window=window)\n",
-    "    planet_ds = planet_ds.transpose([1, 2, 0]).astype(np.float32)\n",
-    "\n",
-    "coastal_blue_nan_mask = (planet_ds[..., 0] == planet_profile['nodata'])\n",
-    "planet_ds[coastal_blue_nan_mask, :] = np.nan"
+    "coastal_blue_clip = planet_clipped.where(planet_clipped[0] != planet_profile['nodata'])"
    ]
   },
   {
@@ -261,21 +317,21 @@
    "id": "627d3407-8fd7-498e-8394-8ca4f58233e7",
    "metadata": {},
    "source": [
-    "### Subset Planet imagery to Red, Green, NIR bands and normalize data"
+    "### Subset Planet imagery to Red, Green, NIR bands"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a04cd2f5-39ec-4964-aaba-e7cfbb4f514f",
-   "metadata": {},
+   "id": "7fb7731f-aa3c-4430-b631-4e00675188ee",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "with rasterio.open(planet_image_path) as ds:\n",
-    "    bands = ds.descriptions\n",
-    "pprint(list(enumerate(bands)))\n",
-    "\n",
-    "rgnir = scale_img(planet_ds[..., [7, 5, 3]]) "
+    "rgnir = coastal_blue_clip.sel(band=[7, 5, 3])\n",
+    "rgnir.attrs['long_name'] = ('nir', 'red', 'green')\n",
+    "rgnir"
    ]
   },
   {
@@ -283,25 +339,24 @@
    "id": "3f3b0325-d2ce-445f-9ce6-7604ddabeaaa",
    "metadata": {},
    "source": [
-    "### Remove outliers (highest and lowest 2% pixel values) from all 3 bands"
+    "### Remove outliers (highest and lowest 2% pixel values) from all 3 bands and normalize"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02099689-79b7-47f4-a926-a419100156e1",
+   "id": "cd1d8bcf-dad1-45fa-8ee5-1b6d77182a5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "planet_temp = planet_ds[..., [7, 5, 3]]\n",
-    "\n",
-    "planet_ds_view = planet_temp.copy()\n",
-    "for k in tqdm(range(3)):\n",
-    "    m0 = np.nanpercentile(planet_temp[~coastal_blue_nan_mask, k], 2)\n",
-    "    m1 = np.nanpercentile(planet_temp[~coastal_blue_nan_mask, k], 98)\n",
-    "    planet_ds_view[~coastal_blue_nan_mask, k] = np.clip(planet_temp[~coastal_blue_nan_mask, k], m0, m1)\n",
+    "rgnir_out = rgnir.copy()\n",
+    "for i in tqdm(range(3)):\n",
+    "    m0 = rgnir_out[i].quantile(0.02)\n",
+    "    m1 = rgnir_out[i].quantile(0.98)\n",
     "    \n",
-    "rgnir_cropped = scale_img(planet_ds_view)"
+    "    rgnir_out[i] = rgnir_out[i].clip(m0, m1)\n",
+    "    \n",
+    "    rgnir_out[i] = scale_img(rgnir_out[i])"
    ]
   },
   {
@@ -309,97 +364,19 @@
    "id": "00de2443-50fa-4410-ac3e-b51acd709fcb",
    "metadata": {},
    "source": [
-    "### Write Planet rgnir band data to GeoTiff, with outliers removed and cropped to chip extents"
+    "# 5. Write Data to GeoTiff"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d463dc57-f6a0-4740-8a58-1855486ae4df",
+   "id": "e977f5cf-063e-4896-8f1c-fabec0a022e0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "profile_rgnir_cropped = profile_cropped.copy()\n",
-    "profile_rgnir_cropped['count'] = 3\n",
-    "profile_rgnir_cropped['dtype'] = 'float32'\n",
-    "profile_rgnir_cropped['nodata'] = np.nan\n",
+    "tif_path = chip_dir/f'chip_{chip_id}.tif'\n",
     "\n",
-    "preprocessed_path = Path('chips')\n",
-    "preprocessed_path.mkdir(exist_ok=True)\n",
-    "\n",
-    "utm = planet_crs['init'].split(':')[-1]\n",
-    "utm_output = preprocessed_path/f'{planet_image_path.stem}_cropped_to_chip_{utm}_{index}.tif'\n",
-    "with rasterio.open(utm_output, 'w', **profile_rgnir_cropped) as ds:\n",
-    "    ds.write(rgnir_cropped.transpose([2, 0, 1]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "cb217d4f-cbbc-4852-b710-a0c72c044077",
-   "metadata": {},
-   "source": [
-    "### Reproject preprocessed chip to latlon"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e48489ea-fdcd-4686-bbea-93b7157cf444",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dst_crs = 'EPSG:4326'\n",
-    "\n",
-    "source = utm_output\n",
-    "latlon_output = preprocessed_path/f'{planet_image_path.stem}_cropped_to_chip_{index}_latlon.tif'\n",
-    "\n",
-    "with rasterio.open(source) as src:\n",
-    "    transform, width, height = calculate_default_transform(\n",
-    "        src.crs, dst_crs, src.width, src.height, *src.bounds)\n",
-    "    kwargs = src.meta.copy()\n",
-    "    kwargs.update({\n",
-    "        'crs': dst_crs,\n",
-    "        'transform': transform,\n",
-    "        'width': width,\n",
-    "        'height': height\n",
-    "    })\n",
-    "\n",
-    "    with rasterio.open(latlon_output, 'w', **kwargs) as dst:\n",
-    "        for i in range(1, src.count + 1):\n",
-    "            reproject(\n",
-    "                source=rasterio.band(src, i),\n",
-    "                destination=rasterio.band(dst, i),\n",
-    "                src_transform=src.transform,\n",
-    "                src_crs=src.crs,\n",
-    "                dst_transform=transform,\n",
-    "                dst_crs=dst_crs,\n",
-    "                resampling=Resampling.nearest)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b124aa26-0233-4330-bc5a-6480ed3cdce8",
-   "metadata": {},
-   "source": [
-    "### Delete original planet data and cropped chip in utm"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "01507f0b-75dd-4b5a-8b4a-a624a360248d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    shutil.rmtree(planet_dir)\n",
-    "except FileNotFoundError:\n",
-    "    pass\n",
-    "\n",
-    "try:\n",
-    "    utm_output.unlink()\n",
-    "except FileNotFoundError:\n",
-    "    pass"
+    "rgnir_out.rio.to_raster(tif_path)"
    ]
   },
   {
@@ -407,42 +384,32 @@
    "id": "d7ebf40f-8238-4c8c-b84e-6f8417fe3b94",
    "metadata": {},
    "source": [
-    "### Plot pre-processed Planet data"
+    "### Plot GeoTiff"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee537140-e378-4edb-9146-ef84fe97a14d",
+   "id": "2f825cb5-bdad-41a2-bea0-9060f1ca2be5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rasterio.plot import show\n",
+    "import geowombat as gw\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "def get_raster_threshold(raster, low=2, high=98):\n",
-    "    return [np.nanpercentile(raster, low),\n",
-    "            np.nanpercentile(raster, high)]\n",
+    "fig, ax = plt.subplots(dpi=200)\n",
     "\n",
-    "with rasterio.open(latlon_output) as ds:\n",
-    "    image_c = ds.read(window=window)\n",
-    "    image_c = image_c.transpose([1, 2, 0]).astype(np.float32)\n",
-    "\n",
-    "    \n",
-    "    fig, (ax_r, ax_g, ax_nir) = plt.subplots(1, 3, figsize=(28,7))\n",
-    "    thresh = get_raster_threshold(image_c[..., 0])\n",
-    "    show((ds, 1), ax=ax_nir, cmap='GnBu', title='nir band', vmin=thresh[0], vmax=thresh[1])\n",
-    "    thresh = get_raster_threshold(image_c[..., 1])\n",
-    "    show((ds, 2), ax=ax_r, cmap='Reds', title='red band', vmin=thresh[0], vmax=thresh[1])\n",
-    "    thresh = get_raster_threshold(image_c[..., 2])\n",
-    "    show((ds, 3), ax=ax_g, cmap='Greens', title='green band', vmin=thresh[0], vmax=thresh[1])\n",
-    "print(f'Planet Image shape: {image_c.shape}')"
+    "with gw.open(tif_path,\n",
+    "            band_names=['nir', 'red', 'green'],) as src:\n",
+    "    src.where(src != np.nan).sel(band=['nir', 'red', 'green']).plot.imshow(robust=True, ax=ax)\n",
+    "plt.tight_layout(pad=1)\n",
+    "# plt.savefig(\"rgb_plot.png\", dpi=150)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2cb5b435-374d-4aa0-a4e2-41bd73348301",
+   "id": "d52ff5a6-a787-466a-9765-3f8df128f0c4",
    "metadata": {},
    "outputs": [],
    "source": []
